# ScreenSaverConfigDialog

./: .gitignore  CMakeLists.txt  README.md  configsettingsdialog.cpp  configsettingsdialog.h  configwidget.cpp  configwidget.h  main.cpp  screensaverlistview.cpp  screensaverlistview.h
